# tr-ai-bridge

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  EURUSD_RETURN.md  GBPUSD_CONFIG.md  README_AI_BRIDGE.md  RESTART_PROCEDURE.md  cleanup_strategies.py  morenotes  mr_r75.py  mt5_bridge.py  mt5_bridge_v2.py  mt5_bridge_v3.py  mtf_r75.py  risefall.py  start.bat  status_check.py  trading.db
frontend/src/: main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AITrade.tsx  Layout.tsx
migrations/: 20260101000000_init.sql
opencode-scripts/: mtf2.py  risefall2.py
src/: ai_engine.rs  backtest.rs  config.rs  dynamic_config.rs  main.rs  news.rs  seeder.rs
src/api/: ai_trade.rs  mod.rs  settings.rs
src/db/: accounts.rs  analytics.rs  mod.rs  notes.rs  strategies.rs  trades.rs
src/engine/: mod.rs  rules.rs
src/market/: deriv.rs
